# librusimg

./: ..gitignore.un~  .gitignore  Cargo.toml  README.md  license.html
.github/workflows/: rust.yml
src/: backend.rs  errors.rs  extension.rs  lib.rs  structs.rs
src/backend/bmp/: mod.rs
src/backend/empty/: mod.rs
src/backend/jpeg/: mod.rs
src/backend/png/: mod.rs
src/backend/webp/: mod.rs
