[package]
name = "librusimg"
version = "0.1.0"
authors = ["yotio <yotio@yotiosoft.com>"]
description = "A image processing CLI-tool/library for bmp, jpeg, png and webp."
license = "MIT"
edition = "2021"
autobins = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.2"
mozjpeg = { version = "0.10.9", optional = true }
oxipng = { version = "9.1.3", optional = true }
dep_webp = { version = "0.3.0", optional = true, package = "webp" }

[features]
default = ["bmp", "jpeg", "png", "webp", "app"]
bmp = []
jpeg = ["mozjpeg"]
png = ["oxipng"]
webp = ["dep_webp"]

[lib]
name = "librusimg"
