[package]
name = "librusimg"
version = "0.1.0"
authors = ["yotio <yotio@yotiosoft.com>"]
description = "An integrated image processing library for BMP, JPEG, PNG, and WebP formats. This library was developed for the Rusimg project, but it is open for use in other projects as well."
license = "MIT"
edition = "2021"
autobins = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.2"
mozjpeg = { version = "0.10.9", optional = true }
oxipng = { version = "9.1.3", optional = true }
dep_webp = { version = "0.3.0", optional = true, package = "webp" }

[features]
default = ["bmp", "jpeg", "png", "webp"]
bmp = []
jpeg = ["mozjpeg"]
png = ["oxipng"]
webp = ["dep_webp"]

[lib]
name = "librusimg"
