[package]
name = "librusimg"
version = "0.1.0"
authors = ["yotio <yotio@yotiosoft.com>"]
description = "A unified image processing library with a consistent API for BMP, JPEG, PNG, and WebP. Originally developed for my project Rusimg, but fully usable as a standalone crate."
license = "MIT OR Apache-2.0"
edition = "2021"
autobins = true
repository = "https://github.com/yotiosoft/librusimg"
categories = ["multimedia::images"]
documentation = "https://docs.rs/librusimg/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.2"
jpeg-encoder = { version = "0.6.1", optional = true }
oxipng = { version = "9.1.3", optional = true }
dep_webp = { version = "0.3.0", optional = true, package = "webp" }

[features]
default = ["bmp", "jpeg", "png", "webp"]
bmp = []
jpeg = ["jpeg-encoder"]
png = ["oxipng"]
webp = ["dep_webp"]

[lib]
name = "librusimg"
